force-app/main/default/objects/Verification_Batch__c/Verification_Batch__c.object-meta.xml
<CustomObject>
    <description>Verification Batches data</description>
    <label>Verification Batch</label>
    <nameField>
        <label>Verification Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verification Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>