force-app/main/default/objects/Verification_Batch__c/fields/Added_At__c.field-meta.xml
<CustomField>
    <fullName>Added_At__c</fullName>
    <description>Batch creation Date and time</description>
    <label>Added At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>