force-app/main/default/objects/Verification_Batch__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>Batch identifier</description>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>