force-app/main/default/objects/Verification_Batch__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Account ClientId</description>
    <externalId>true</externalId>
    <label>Client Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>