force-app/main/default/objects/Verification_Batch__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>Input for verification request</description>
    <label>Input</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>