force-app/main/default/objects/Verification_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Verification request status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>QUEUED_FOR_MV</fullName>
                <label>MANUAL VERIFICATION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>